k8s/notejam.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
  namespace: notejam
spec:
  replicas: 3
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
        - name: website
          # image from dockerhub
          image: $(image)
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: website
spec:
  ports:
  - port: 80
  selector:
    app: website
